# datadrift_pipeline

./: .dockerignore  .gitignore  .prettierignore  Dockerfile  LICENSE  README.md  allowed_signers  cypress.config.ts  eslint.config.mjs  mineru.json  next.config.ts  package.json  pyproject.toml  setup.sh  tailwind.config.ts  tsconfig.json
.zed/: settings.json
cypress/support/: commands.ts
dataops-be/: manage.py  pyproject.toml
dataops-be/dataops_be/: asgi.py  settings.py  urls.py  wsgi.py
dataops-be/datasets/: urls.py  views.py
dataops-be/mysite/: settings.py
dataops-be/static/openapi/: api_spec.yaml
dataops-be/static/openapi/swagger-dist-ui/: swagger-initializer.js
dataops-be/utils/: mongo.py
dataops-fe/: README.md  package-lock.json  package.json  vue.config.js
dataops-fe/src/: App.vue
dataops-fe/src/api/: http.js
dataops-fe/src/views/: DatasetsView.vue
label_studio/: pytest.ini
label_studio/core/: urls.py  views.py
label_studio/core/settings/: base.py
label_studio/io_storages/: proxy_api.py
label_studio/jwt_auth/: views.py
label_studio/qocr/: urls.py  views.py
label_studio/qocr/model/: __init__.py  entity.py
label_studio/qocr/service/: parse_service.py
label_studio/templates/: base.html
label_studio/users/templates/users/new-ui/: user_base.html  user_signup.html
mlops-be/: manage.py
mlops-be/mlops_be/: asgi.py  settings.py  urls.py  wsgi.py
mlops-fe/: README.md  package-lock.json  package.json
mlops-fe/src/: App.vue
mlops-fe/src/plugins/: vuetify.js
mlops-fe/src/views/: MLTaskView.vue
sample_data/: customer_segments.json  house_prices.json  load_all_datasets_to_mongo.py  movie_reviews.json  sample_users_churn.json
scripts/: database.ts  foreign-table.sql  init.sql  ls-project-trigger.sql
src/: middleware.ts
src/app/: dictionaries.client.ts  globals.css  layout.tsx  page.tsx
src/app/(protected)/: layout.tsx
src/app/(protected)/dashboard/: page.tsx
src/app/(protected)/dashboard/label/: page.tsx
src/app/(protected)/dashboard/label/[id]/: page.tsx
src/app/(protected)/dashboard/labelstudio/: page.tsx
src/app/(protected)/dashboard/models/: columns.tsx  data-table.tsx  page.tsx
src/app/(protected)/dashboard/models/[id]/: columns.tsx  data-table.tsx
src/app/(protected)/dashboard/models/train/: page.tsx
src/app/(protected)/dashboard/monitoring/logs/: page.tsx
src/app/(protected)/dashboard/projects/: page.tsx
src/app/(protected)/services/gradio/: page.tsx
src/app/(protected)/services/swagger/: page.tsx
src/app/[lang]/: dictionaires.ts  layout.tsx  page.tsx
src/app/[lang]/(protected)/dashboard/: page.tsx
src/app/[lang]/(protected)/dashboard/models/: page.tsx
src/app/[lang]/(protected)/dashboard/models/[id]/: columns.tsx  page.tsx
src/app/[lang]/(protected)/dashboard/models/default/: page.tsx
src/app/[lang]/(protected)/dashboard/models/train/: page.tsx
src/app/[lang]/(protected)/dashboard/monitoring/default/: page.tsx
src/app/[lang]/(protected)/dashboard/projects/: page.tsx
src/app/[lang]/(protected)/dashboard/projects/[id]/: page.tsx
src/app/[lang]/(protected)/services/labelstudio/: page.tsx
src/app/[lang]/dictionaries/: en.json  ko.json
src/app/dashboard/: layout.tsx  page.tsx
src/app/dashboard/gradio/: page.tsx
src/app/dashboard/labelstudio/: page.tsx
src/app/dashboard/swagger/: page.tsx
src/app/labelstudio/: page.tsx
src/app/login/: layout.tsx  page.tsx
src/app/models/: columns.tsx  data-table.tsx  page.tsx
src/app/models/[id]/: columns.tsx  data-table.tsx  page.tsx
src/app/next-api/internal/logs/: route.ts
src/app/services/labelstudio/: page.tsx
src/components/: app-sidebar.tsx  login-form.tsx  model-type-badge.tsx  stat-card.tsx
src/components/app-sidebar/: app-sidebar.tsx  collapsible-menu-item.tsx  data.ts  nav-main.tsx  nav-secondary.tsx  nav-user.tsx  service-menu-item.tsx  services-section.tsx  settings-section.tsx  sidebar-header-section.tsx  site-header.tsx  types.ts
src/components/card-collection/: README.md  card-collection.examples.tsx  card-collection.tsx  index.ts
src/components/colors/: model-type.ts
src/components/dashboard/: card.tsx  header.tsx  sidebar.tsx
src/components/docker/: log-stream-controls.tsx
src/components/file-upload/: file-upload-dialog.tsx
src/components/icons/: gradio-icon.tsx  index.ts  label-studio-icon.tsx  swagger-icon.tsx
src/components/labelstudio/: project-card-collection.tsx  project-card-dropdown.tsx  project-card.tsx  project-edit-dialog.tsx
src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  checkbox.tsx  dialog.tsx  dropdown-menu.tsx  form.tsx  input.tsx  label.tsx  separator.tsx  sheet.tsx  sidebar.tsx  skeleton.tsx  table.tsx  tooltip.tsx  upload.tsx
src/contexts/: AuthContext.tsx  BackgroundTaskContext.tsx
src/entities/: labelstudio.ts  ml-model.ts
src/hooks/: use-default-models.ts  use-file-upload.ts
src/hooks/network/: docker.ts  logs.ts  models.ts  projects.ts
src/hooks/network/shared/: useApiData.ts
src/hooks/train/: use-training-setup.ts  use-training-state.ts
src/lib/: api-client.ts  api-examples.tsx
src/lib/api/: client.ts  index.ts  types.ts
src/lib/api/endpoints/: container-logs.ts  direct.ts  index.ts  jwt.ts  ml-models.ts  projects.ts  users.ts
src/lib/api/endpoints/labelstudio/: direct.ts  projects.ts
src/lib/api/models/: ml-model-version.ts  ml-models.ts  pagination.ts  projects.ts  tasks.ts
src/lib/api/models/labelstudio/: projects.ts
src/lib/background-tasks/: manager.ts  training-executor.ts
src/lib/server/: external-proxy.ts
src/lib/utils/: cookie.util.ts  time.ts
tests/: setup.ts
web/apps/labelstudio/src/pages/Home/: HomePage.tsx
