[tool.poetry]
name = "dataops-be"
version = "0.1.0"
description = ""
authors = ["kyj7479 <kyj7479@diquest.com>"]

[tool.poetry.dependencies]
python = "~3.8"
Django = "3.1.13"
djangorestframework = "^3.12.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
